unpackaged/main/default/objects/Campaign/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>