unpackaged/main/default/objects/Campaign/fields/Simplybook_Category_Id__c.field-meta.xml
<CustomField>
    <fullName>Simplybook_Category_Id__c</fullName>
    <description>Simply Booking Category Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Simplybook Category Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>