unpackaged/main/default/objects/Campaign/fields/Simplybook_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>Simplybook_Service_Id__c</fullName>
    <description>Simply Booking Service Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Simplybook Service Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>