unpackaged/main/default/objects/Campaign/listViews/Copy_of_All_Active_Campaigns.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Active_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Jelena61,Halima44</value>
    </filters>
    <label>Sales Excellence Department</label>
    <sharedTo>
        <group>Sales_Excellence_Team</group>
    </sharedTo>
</ListView>